kubernetes/graphql/graphql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphql
  labels:
    app: graphql
spec:
  replicas: 5
  selector:
    matchLabels:
      app: graphql
  template:
    metadata:
      labels:
        app: graphql
    spec:
      containers:
      - name: graphql
        image: yiprograms/team16-nthu-lost-found-backend:0.0.7
        volumeMounts:
        - name: google-secret
          mountPath: "/app/google-secret"
          readOnly: true
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
      volumes:
      - name: google-secret
        secret:
          secretName: graphql-google-secret
          items:
          - key: service-account-file.json
            path: service-account-file.json
