kubernetes/graphql/graphql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphql-sv
spec:
  selector:
    app: graphql
  ports:
    - port: 3000
      targetPort: 3000
