kubernetes/graphql/graphql-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graphql-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
     - http:
        paths:
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: graphql-sv
                port:
                  number: 3000
